Corrected link names

--- a/card-animation/src/pages/index.astro
+++ b/card-animation/src/pages/index.astro
@@ -12,6 +12,7 @@ import Linkedin from '/Images/linkedIn.gif'
 		<title>Document</title>
 		<style>
 			.card{
+				delay: 1000ms;
 				animation: slideUp 500ms ease-out;
 			}
 			.background-animate {
@@ -44,7 +45,7 @@ import Linkedin from '/Images/linkedIn.gif'
 		<div class="absolute top-10">
 			<button popovertarget="popover" class="p-2 bg-green-500 rounded-md shadow-md shadow-green-400 text-white font-bold hover:text-l">Click Me!</button>
 		</div>
-		<div id="popover" popover class="card p-5 border rounded-md shadow-lg shadow-blue-200 bg-gradient-to-r from-pink-300 via-red-300 to-yellow-300 background-animate text-white">
+		<div id="popover" popover class="card p-5 border rounded-md shadow-lg shadow-blue-200 bg-gradient-to-r from-pink-300 via-red-300 to-yellow-300 background-animate text-white transition delay-500">
 			<main class="text-center">
 				<h1 class="text-left text-2xl font-bold">Hello 👋, This is Rajeev</h1>
 				<p class="text-left py-3 w-72">
@@ -60,7 +61,7 @@ import Linkedin from '/Images/linkedIn.gif'
 						<a href="https://www.linkedin.com/in/rajeevkrishna25/
 						" target="_blank" class="hover:underline flex items-center gap-3">
 						<img src={Twitter} alt="" class="w-10 rounded-full">
-						rajeevkrishna25
+						RadzhivDev
 					</a>
 					</li>
 					<li>
@@ -72,7 +73,7 @@ import Linkedin from '/Images/linkedIn.gif'
 					<li>
 						<a href="https://twitter.com/radzhivdev?s=21&t=welWG80NpNkbco1EA-hKfg" target="_blank" class="hover:underline flex items-center gap-3">
 							<img src={Linkedin} alt="" class="w-10 rounded-full">
-							RadzhivDev
+							rajeevkrishna25
 						</a>
 					</li>
 				</ul>
