--- a/blog-node/src/pages/index.astro
+++ b/blog-node/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from '../components/Navbar.astro'
 import Home from './home.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <html lang="en">
@@ -13,5 +14,6 @@ import Home from './home.astro'
 	<body class="bg-white text-pink-400">
 		<Navbar />
 		<Home />
+		<Footer />
 	</body>
 </html>
