News section half completed

--- a/blog-node/src/pages/home.astro
+++ b/blog-node/src/pages/home.astro
@@ -16,7 +16,7 @@ import Event from '/images/event.avif'
         <h1 class="text-5xl w-auto md:w-1/3">Unleash your thoughts.</h1>
         <p class="text-xl md:mt-0 mt-5 w-auto md:w-1/3">Welcome to Blog Node, where we explore the fascinating, the wild and the downright quirky world of the latest news, job oppurtunities and events get ready for an engaging and eye-opening experiences.</p>
     </section>
-    <section class="py-12 md:flex flex-col md:flex-row gap-20">
+    <section class="md:py-12 py-5 md:flex flex-col md:flex-row gap-20">
         <div class="left-hero md:w-1/2">
             <img src={HeroB} alt="" class="rounded-lg w-auto">
             <div class="">
@@ -42,7 +42,7 @@ import Event from '/images/event.avif'
         content="Explore exciting job openings and find the perfect opportunity that aligns with your career goals and passions."
         img={Image2}/>
     </div>
-    <section class="py-20 flex md:flex-row flex-col">
+    <section class="event py-24 flex md:flex-row flex-col gap-20">
         <div class="left-eve md:w-1/2">
             <h1 class="py-3 text-5xl">Events</h1>
             <p class="md:w-2/3">Never miss out on top-notch events, workshops, and webinars that fuel your creativity and expand your horizons. Grab your spot today and connect with your community!</p>
@@ -65,8 +65,8 @@ import Event from '/images/event.avif'
                 <img src={Event} alt="" class="rounded-md">
         </div>
     </section>
-    <section>
-        <h1 class="text-center md:text-4xl text-3xl mb-10">Got Questions we have got answers</h1>
+    <section class="my-10">
+        <h1 class="my-10 text-center md:text-4xl text-3xl">Got Questions we have got answers</h1>
         <div class="card-grid grid md:grid-cols-2 grid-rows-1 gap-10">
             <div class="item-1">
                 <h1 class="font-bold text-xl">
