--- a/blog-node/src/pages/index.astro
+++ b/blog-node/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from '../components/Footer.astro'
 		<meta name="generator" content={Astro.generator} />
 		<title>Blog Node</title>
 	</head>
-	<body class="bg-white text-pink-400">
+	<body class="md:px-10 bg-[F6F6F6] text-[#FFCB74]">
 		<Navbar />
 		<Home />
 		<Footer />
