News Section completed

--- a/blog-node/src/components/Footer.astro
+++ b/blog-node/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Facebook from '/images/icons8-facebook.gif'
 import Twitch from '/images/icons8-twitch.gif'
 ---
 
-<div class="footer text-center py-5">
+<div class="footer text-[#ffb941] text-center py-5">
     <div class="footer-links flex items-center justify-evenly py-5">
         <div class="list-1">
             <h1 class="text-left text-xl font-bold">News</h1>
