--- a/blog-node/src/components/Navbar.astro
+++ b/blog-node/src/components/Navbar.astro
@@ -1,17 +1,17 @@
-<div class="nav p-5 flex items-center justify-between">
-	<h1 class="text-4xl text-orange-400 font-bold">Blog Node</h1>
+<div class="nav p-5 flex items-center justify-between text-[#ffb941]">
+	<h1 class="text-4xl font-bold text-orange-400">Blog Node</h1>
 	<ul class="md:flex gap-10 md:visible hidden">
 		<li>
-			<a href="/">Home</a>
+			<a href="/" class="hover:text-pink-500">Home</a>
 		</li>
 		<li>
-			<a href="/news" target="_parent">News</a>
+			<a href="/news" target="_parent" class="hover:text-pink-500">News</a>
 		</li>
 		<li>
-			<a href="/event" target="_parent">Events</a>
+			<a href="/event" target="_parent" class="hover:text-pink-500">Events</a>
 		</li>
 		<li>
-			<a href="/job" target="_parent">Jobs</a>
+			<a href="/job" target="_parent" class="hover:text-pink-500">Jobs</a>
 		</li>
 	</ul>
 </div>
