Added page links in footer

--- a/blog-node/src/components/Footer.astro
+++ b/blog-node/src/components/Footer.astro
@@ -8,7 +8,11 @@ import Twitch from '/images/icons8-twitch.gif'
 <div class="footer text-[#ffb941] text-center py-5">
     <div class="footer-links flex items-center justify-evenly py-5">
         <div class="list-1">
-            <h1 class="text-left text-xl font-bold">News</h1>
+            <h1 class="text-left text-xl font-bold">
+                <a href="/news">
+                    News
+                </a>
+            </h1>
             <ul class="text-left">
                 <li>Technology</li>
                 <li>Business</li>
@@ -16,7 +20,11 @@ import Twitch from '/images/icons8-twitch.gif'
             </ul>
         </div>
         <div class="list-2">
-            <h1 class="text-left text-xl font-bold">Jobs</h1>
+            <h1 class="text-left text-xl font-bold">
+                <a href="/job">
+                    Jobs
+                </a>
+            </h1>
             <ul class="text-left">
                 <li>Design</li>
                 <li>Marketing</li>
@@ -24,7 +32,11 @@ import Twitch from '/images/icons8-twitch.gif'
             </ul>
         </div>
         <div class="list-3">
-            <h1 class="text-left text-xl font-bold">Events</h1>
+            <h1 class="text-left text-xl font-bold">
+                <a href="/event">
+                    Events
+                </a>
+            </h1>
             <ul class="text-left">
                 <li>Webinars</li>
                 <li>Workshops</li>
